# hyperfold-engine

./: .gitignore  Cargo.toml  build.rs
diagnostic/: Cargo.toml
diagnostic/src/: critical_result.rs  diagnostic.rs  error.rs  lib.rs  result.rs  warning_result.rs  writer.rs
ecs-lib/: Cargo.toml
ecs-lib/src/: lib.rs  parse.rs
ecs-lib/src/parse/: component.rs  event.rs  input.rs  mod.rs  paths.rs  system.rs  util.rs
ecs-macros/: Cargo.toml
ecs-macros/src/: lib.rs  structs.rs
ecs-macros/src/shared/: label.rs  macro_args.rs  mod.rs
ecs_lib/: Cargo.toml
ecs_lib/src/: lib.rs
ecs_lib/src/parse/: component.rs  event.rs  mod.rs  paths.rs  system.rs
ecs_macros/: Cargo.toml
ecs_macros/src/shared/: array_creator.rs  paths.rs  traits.rs
hyperfold_build/: Cargo.toml
hyperfold_build/src/: ast_parser.rs  ast_visitor.rs  component.rs  env.rs  event.rs  lib.rs  system.rs  util.rs
hyperfold_build/src/ast_parser/: ast_visitor.rs  component.rs  event.rs  mod.rs  system.rs  util.rs
hyperfold_macros/: Cargo.toml
hyperfold_macros/src/: lib.rs
hyperfold_macros/src/parse/: component.rs  dependencies.rs  event.rs  mod.rs  paths.rs  system.rs  util.rs
hyperfold_shared/: Cargo.toml
hyperfold_shared/src/: label.rs  lib.rs  macros.rs  old.rs  paths.rs
macros/src/: input.rs  lib.rs
parser/: Cargo.toml
parser/src/: lib.rs  util.rs
parser/src/codegen/: ast_codegen.rs  codegen.rs  component_set.rs  component_sets.rs  components.rs  crate_paths.rs  events.rs  globals.rs  idents.rs  manager.rs  mod.rs  mods.rs  structs.rs  system.rs  systems.rs  traits.rs  util.rs
parser/src/codegen2/: component_sets.rs  components.rs  crate_paths.rs  events.rs  globals.rs  idents.rs  manager.rs  mod.rs  systems.rs  traits.rs
parser/src/component_set/: codegen.rs  labels.rs  mod.rs  parse.rs  resolve.rs  test.rs
parser/src/constants/: mod.rs
parser/src/parse/: ast_crate.rs  ast_file.rs  ast_fn_arg.rs  ast_mod.rs  attributes.rs  find_path.rs  mod.rs  symbol.rs
parser/src/parse/items/: enums.rs  functions.rs  macros.rs  mod.rs  structs.rs  uses.rs
parser/src/resolve/: ast_component_set.rs  ast_items.rs  ast_paths.rs  ast_resolve.rs  basic_items.rs  component_set.rs  constants.rs  function_arg.rs  items.rs  items_crate.rs  labels.rs  mod.rs  parse_macro_call.rs  path.rs  paths.rs  resolve_path.rs  util.rs
parser/src/resolve/component_set/: codegen.rs  mod.rs  resolve.rs
parser/src/system/: codegen.rs  mod.rs  parse.rs  resolve.rs
parser/src/utils/: diagnostic.rs  functions.rs  idents.rs  mod.rs  msg.rs  paths.rs  tree.rs
parser/src/utils/syn/: mod.rs  parse.rs  path.rs  span.rs  tokenstream.rs  type.rs  uses.rs
parser/src/validate/: ast_item_list.rs  ast_pathing.rs  ast_system.rs  ast_validate.rs  constants.rs  mod.rs  util.rs
shared/: Cargo.toml
shared/src/: constants.rs  lib.rs  macro_args.rs  msg_result.rs  parse_args.rs  util.rs  util_macros.rs
shared/src/syn/: error.rs  mod.rs  msg.rs  parse.rs  path.rs  quote.rs  tokenstream.rs  type.rs  uses.rs
shared/src/traits/: and_then.rs  bool.rs  call.rs  catch.rs  collect_vec.rs  discard.rs  expand_enum.rs  find.rs  get.rs  get_2d.rs  increment.rs  mod.rs  option.rs  push_into.rs  range.rs  result.rs  split.rs  unzip.rs
src/: asset_manager.rs  event.rs  includes.rs  intersect.rs  lib.rs  main.rs  sdl2_bindings.rs  sdl2_image_bindings.rs  sdl2_ttf_bindings.rs  test.rs
src/ecs/: component.rs  components.rs  ecs.rs  entities.rs  entity.rs  event.rs  events.rs  mod.rs  system.rs  systems.rs
src/ecs/test/: tmp.rs
src/framework/: asset_manager.rs  drawable.rs  event_system.rs  font.rs  mod.rs  physics.rs  render_data.rs  render_system.rs  renderer.rs  shapes.rs  text.rs  texture.rs  texture_builder.rs
src/framework/event_system/: event.rs  mod.rs  mouse.rs
src/framework/render_system/: asset_manager.rs  drawable.rs  font.rs  mod.rs  render_data.rs  render_text.rs  renderer.rs  shapes.rs  surface.rs  text.rs  texture.rs  window.rs
src/utils/: colors.rs  event.rs  math.rs  mod.rs  number.rs  pointers.rs  rand.rs  rect.rs  timer.rs  util.rs
src/utils/traits/: mod.rs  type_id.rs
