# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "hyperfold-engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.15"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.ecs-lib]
version = "0.1.0"
path = "./ecs-lib/"
package = "ecs-lib"

[build-dependencies.syn]
version = "2.0.15"
features = ["full"]

[build-dependencies]
bindgen = "0.65.1"
proc-macro2 = "1.0.56"
quote = "1.0.26"
