# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "hyperfold_engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.15"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.hyperfold_macros]
version = "0.1.0"
path = "./hyperfold_macros/"
package = "hyperfold_macros"

[dependencies.hyperfold_shared]
version = "0.1.0"
path = "./hyperfold_shared/"
package = "hyperfold_shared"

[build-dependencies]
bindgen = "0.65.1"

[build-dependencies.hyperfold_build]
version = "0.1.0"
path = "./hyperfold_build"
package = "hyperfold_build"

