[package]
name = "diagnostic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
regex = "1.9.3"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
syn = "2.0.28"
