# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "ecs-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["proc-macro"]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"

[dependencies.syn]
version = "2.0.15"
features = ["full"]
