# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "ecs_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["proc-macro"]
proc-macro = true

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.15"
proc-macro2 = "1.0.56"
quote = "1.0.26"
regex = "1.7.3"

[dependencies.syn]
version = "2.0.15"
features = ["full"]

[dependencies.ecs_macros]
version = "0.1.0"
path = "../ecs_macros/"
package = "ecs_macros"

[dependencies.hyperfold_build]
version = "0.1.0"
path = "../hyperfold_build/"
package = "hyperfold_build"
