[package]
name = "hyperfold_build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"

[dependencies.ecs_macros]
version = "0.1.0"
path = "../ecs_macros/"
package = "ecs_macros"

[dependencies.syn]
version = "2.0.15"
features = ["full"]
