[package]
name = "hyperfold_build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse_cfg = "3.1.0"
proc-macro2 = "1.0.56"
quote = "1.0.26"

[dependencies.hyperfold_shared]
version = "0.1.0"
path = "../hyperfold_shared/"
package = "hyperfold_shared"

[dependencies.syn]
version = "2.0.15"
features = ["full"]
