# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "hyperfold_macros"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["proc-macro"]
proc-macro = true

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.15"
proc-macro2 = "1.0.56"
quote = "1.0.26"
regex = "1.7.3"

[dependencies.syn]
version = "2.0.15"
features = ["full"]

[dependencies.hyperfold_shared]
version = "0.1.0"
path = "../hyperfold_shared/"
package = "hyperfold_shared"

[dependencies.hyperfold_build]
version = "0.1.0"
path = "../hyperfold_build/"
package = "hyperfold_build"
